20121228 man/fuse.1: whitespace and italics fixes (Stuart).
20121228 man/fuse.1: add missing 'SpecDrum volume' section (Stuart).
20121228 man/fuse.1: restore spacing between synopsis and description and
         use default paragraph spacing for the entire man page (Stuart).
20121228 man/fuse.1: use 'tbl' syntax for example of Spectranet current
         configuration screen (Stuart).
20121229 unittests/unittests.c: make unit tests pass for 16K and Timex
         machines.
20121229 man/fuse.1: whitespace and punctuation fixes (Stuart).
20121230 man/fuse.1: use bold font for command line option names (Stuart).
20121230 compat/unix/socket.c: don't ignore the return code from read().
20121230 man/fuse.1: formatting fixes (Stuart).
20121230 man/fuse.1: fix typo (Fred).
20121230 man/fuse.1: fix typo (thanks, Fred) (Stuart).
20121230 man/fuse.1: use conformant and more consistent syntax (Stuart).
20121231 AUTHORS,README,THANKS,fuse.c,man/fuse.1,menu.[ch],menu_data.dat,
         peripherals/if[12].[ch],ui.c,ui/options.dat: rename 'Interface I' and
         'Interface II' to 'Interface 1' and 'Interface 2' (Stuart).
20121231 man/fuse.1: use non-breaking spaces where appropriate (Stuart).
20130101 man/fuse.1: fix text in SPECTRANET EMULATION section (Fred).
20130102 menu.c,menu_data.dat,settings.{dat,pl}: fix command line options and
         add menu items for Opus Discovery and DISCiPLE ROM selection (Stuart).
20130102 fuse.c,man/fuse.1,utils.c: wire up the --discipledisk option and
         document it (Stuart).
20130102 hacking/peripheral_tests.txt: add instructions for testing the
         DISCiPLE interface (Stuart).
20130103 configure.ac,fuse.c: make some URLs point to the new sourceforge forge
         and update copyright date to 2013 (Sergio).
20130103 configure.ac,fuse.c,README: add trailing slashes to URLs where
         appropriate (Stuart).
20130103 peripherals/disk/disciple.c: fix inverted printer busy logic (Stuart).